exercises/31-kctl-ing-create/solution/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dumpster-ing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
        - path: /v1
          backend:
            serviceName: svc-v1
            servicePort: 8080
        - path: /v2
          backend:
            serviceName: svc-v2
            servicePort: 8080
        - path: /v3
          backend:
            serviceName: svc-v3
            servicePort: 8080
